[gd_scene load_steps=6 format=3 uid="uid://df2rhajes22or"]

[ext_resource type="Script" path="res://scripts/ending.gd" id="1_aruec"]
[ext_resource type="PackedScene" uid="uid://b22dckdho80ey" path="res://scenes/common/transition.tscn" id="2_lyofh"]
[ext_resource type="PackedScene" uid="uid://cslxaxhgvxwyt" path="res://scenes/common/gui.tscn" id="4_a5rnh"]
[ext_resource type="PackedScene" uid="uid://wvt2suixd2jw" path="res://scenes/common/dialogue.tscn" id="5_4hlnh"]
[ext_resource type="Texture2D" uid="uid://c4rsed50ybawm" path="res://assets/visual/End_Judgement.png" id="5_c41ig"]

[node name="Ending" type="Node2D"]
script = ExtResource("1_aruec")

[node name="Transition" parent="." instance=ExtResource("2_lyofh")]
fade_in_time = 1.0
fade_out_time = 2.0

[node name="GUI" parent="." instance=ExtResource("4_a5rnh")]

[node name="Dialogue" parent="." instance=ExtResource("5_4hlnh")]

[node name="Background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("5_c41ig")
metadata/_edit_lock_ = true

[node name="WeighingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="fade_in_completed" from="Transition" to="." method="_on_transition_fade_in_completed"]
[connection signal="fade_out_completed" from="Transition" to="." method="_on_transition_fade_out_completed"]
[connection signal="finished_speaking" from="Dialogue" to="." method="_on_dialogue_finished_speaking"]
[connection signal="timeout" from="WeighingTimer" to="." method="_on_weighing_timer_timeout"]
